--- a/index.html
+++ b/index.html
@@ -1,14 +1,26 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="color-scheme" content="dark light" />
     <title>Сложно сосредоточиться</title>
+    <link rel="icon" href="/images/favicon.ico" sizes="any" />
+    <link rel="icon" href="/images/favicon.svg" type="image/svg+xml" />
+    <link rel="apple-touch-icon" href="/images/apple-touch-icon.png" />
+    <link rel="stylesheet" href="./fonts/fonts.css" />
+    <link rel="stylesheet" href="./styles/globals.css" />
+    <link rel="stylesheet" href="./styles/variables.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./styles/dark.css" />
+    <link rel="stylesheet" href="./styles/light.css" />
     <script src="./scripts/script.js"></script>
   </head>
+
   <body class="page">
     <header class="header decorated-zone">
+      <span class="header__rec" aria-hidden="true">REC</span>
       <nav class="header__theme-menu">
         <ul class="header__theme-menu-list">
           <li class="header__theme-menu-item">
@@ -35,6 +47,235 @@
           </li>
         </ul>
       </nav>
+      <h1 class="header__title">no focus</h1>
+      <p class="header__subtitle title-decor">
+        Что делать, когда не можешь делать ничего
+        Или&nbsp;почему&nbsp;нам&nbsp;так&nbsp;сложно сконцентрироваться,
+        особенно когда очень надо
+      </p>
     </header>
+    <main class="main">
+      <section class="main__section">
+        <h2 class="main__title">Почему сосредоточиться так сложно</h2>
+        <article class="main__content">
+          <ul class="main__content__list">
+            <li class="main__content__element">
+              <p class="main__content__element__subtitle title-decor">
+                Многозадачность
+              </p>
+              <p class="main__content__element__text">
+                Особенно сложно сосредоточиться, когда задач много и все они —
+                важные. Где же легендарная многозадачность, когда она так нужна
+                вам (и всем нанимающим менеджерам этого мира)? А дело в том, что
+                её просто не существует. Исследователи
+                <a href="#" class="main__content__element__text-link"
+                  >выяснили</a
+                >, что мозгу тяжело концентрироваться даже на двух делах
+                одновременно. А когда в поле внимания попадает несколько важных
+                задач, организм паникует и выделяет кортизол и адреналин —
+                «гормоны стресса». Из-за этого мы работаем невнимательно:
+                ошибаемся и быстро устаём.
+              </p>
+            </li>
+            <li class="main__content__element">
+              <p class="main__content__element__subtitle title-decor subtitle">
+                Дофамин
+              </p>
+              <p class="main__content__element__text">
+                С гормонами стресса всё понятно, но дальше — ещё интереснее. В
+                нашей невозможности сосредоточиться замешана и полная
+                противоположность стрессу — дофамин. Это вещество участвует в
+                системе вознаграждения мозга. Причём тут он? Мы часто
+                отвлекаемся от важной задачи на что-то более «приятное» для
+                мозгов. Например, смотрим лайки в соцсетях. В это время и
+                выделяется дофамин — и мы чувствуем удовольствие. Получается
+                замкнутый круг: чем больше отвлекаешься, тем больше удовольствия
+                получаешь.
+              </p>
+            </li>
+          </ul>
+        </article>
+      </section>
+      <section class="main__section">
+        <h2 class="main__title">Что снижает концентрацию внимания?</h2>
+        <article class="main__content">
+          <ul class="main__content__list">
+            <li class="main__content__element">
+              <p class="main__content__element__subtitle title-decor">
+                Многозадачность
+              </p>
+              <p class="main__content__element__text">
+                Как концентрация может снижаться из-за… концентрации? Любая
+                стрессовая ситуация (и резко меняющийся мир в целом) заставляет
+                наш мозг постоянно «сканировать» окружающую среду на предмет
+                опасности. Например, читать новости вместо работы. Но быть
+                собранными всё время — невозможно. Концентрация — мышца, и она
+                может не выдержать, если не давать ей отдохнуть.
+              </p>
+            </li>
+            <li class="main__content__element">
+              <p class="main__content__element__subtitle title-decor subtitle">
+                Еда
+              </p>
+              <p class="main__content__element__text">
+                «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно
+                доставляют в мозг энергию и помогают ему лучше работать. Но
+                уходит эта энергия также быстро, как и приходит. А мы в
+                результате попадаем на «углеводные качели»: как только действие
+                «быстрых углеводов» заканчивается, мы чувствуем усталость и
+                сонливость. И хотим ещё больше быстрых углеводов.
+              </p>
+            </li>
+            <li class="main__content__element">
+              <p class="main__content__element__subtitle title-decor">
+                Гаджеты
+              </p>
+              <p class="main__content__element__text">
+                Да-да, это та самая ситуация, когда на экране ноутбука — код, в
+                наушниках — подкаст, а на компьютере фоном — ещё и видео с
+                забавными утятами. В результате мозг пытается переключиться с
+                одной задачи на другую — и просто не может. А чтобы вернуться к
+                состоянию полной концентрации, человеку в среднем нужно 20
+                минут. Вот и получается, что чем больше времени мы проводим в
+                гаджетах, тем больше времени затем нужно, чтобы вернуться к
+                работе.
+              </p>
+            </li>
+          </ul>
+        </article>
+      </section>
+      <section class="main__section">
+        <h2 class="main__title">
+          Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
+          секунд)
+        </h2>
+        <article class="main__content">
+          <ul class="main__content__list">
+            <li class="main__content__element">
+              <div class="main__content__element__subtitle__wrapper">
+                <p class="main__content__element__subtitle title-decor">
+                  5 простых (на самом деле не очень) советов
+                </p>
+                <p
+                  class="main__content__element__subtitle main__content__element__subtitle--regular title-decor"
+                >
+                  Представьте небо и облака
+                </p>
+              </div>
+              <p class="main__content__element__text">
+                Или листья в ручье. Тут дело в лёгкой медитации, которая
+                помогает успокоиться. Ведь часто именно тревожные мысли о
+                сложных задачах как раз и мешают эти сложные задачи делать. В
+                такие моменты можно закрыть глаза и представить, что чистое небо
+                — это вы, а облака — тревожные мысли. И сколько бы их ни было —
+                ясное небо всегда будет где-то там, за тучами, и никуда не
+                денется. Это упражнение поможет вернуться в настоящий момент, а
+                не волноваться о потенциальных проблемах из будущего.
+              </p>
+            </li>
+            <li class="main__content__element">
+              <p
+                class="main__content__element__subtitle main__content__element__subtitle--regular title-decor"
+              >
+                Включите музыку
+              </p>
+              <p class="main__content__element__text">
+                Но не любую, и не любимую. Любимая может быть связана с сильными
+                положительными эмоциями, которые тоже очень сильно отвлекают.
+                Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще
+                попробовать включить плейлист с «белым шумом» или нейромузыкой.
+              </p>
+            </li>
+            <li class="main__content__element">
+              <p
+                class="main__content__element__subtitle main__content__element__subtitle--regular title-decor"
+              >
+                Прогуляйтесь
+              </p>
+              <p class="main__content__element__text">
+                Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
+                <a href="#" class="main__content__element__text-link">показал</a
+                >, что созерцание природы повышает концентрацию, в то время как
+                после просмотра городских пейзажей она наоборот понижается.
+                Можно совместить прогулку с физическими упражнениями или бегом —
+                так в мозг поступит ещё больше кислорода и он будет лучше
+                работать. Но и простая двадцатиминутная прогулка — тоже отличный
+                вариант.
+              </p>
+            </li>
+            <li class="main__content__element">
+              <p
+                class="main__content__element__subtitle main__content__element__subtitle--regular title-decor"
+              >
+                Хорошо ешьте
+              </p>
+              <p class="main__content__element__text">
+                Мы — не ваша бабушка, но это правда важно. Выбирайте продукты,
+                которые препятствуют резким скачкам сахара в крови. Например, с
+                высоким содержанием клетчатки: овощи, ягоды, бобовые (нут,
+                чечевица, фасоль), коричневый рис, хлеб из цельнозерновой
+                пшеницы.
+              </p>
+            </li>
+            <li class="main__content__element">
+              <p
+                class="main__content__element__subtitle main__content__element__subtitle--regular title-decor"
+              >
+                Читайте
+              </p>
+              <p class="main__content__element__text">
+                Настоящие бумажные книги. Это правда помогает с концентрацией:
+                чтобы прочитать пост в соцсети, достаточно нескольких минут или
+                даже секунд. А вот интересная книга способна затянуть и на
+                несколько часов и круто тренирует направленное внимание.
+              </p>
+            </li>
+          </ul>
+        </article>
+      </section>
+      <section class="main__section main__section__gallery">
+        <h2 class="main__title__gallery title-decor">А можно в картинках?</h2>
+        <ul class="main__gallery__list">
+          <li class="main__gallary__item">
+            <img
+              src="./images/sunset.png"
+              alt="Закат над морем с горами и летящими птицами в розово-фиолетовых тонах"
+              class="main__gallery__picture"
+            />
+          </li>
+          <li class="main__gallary__item">
+            <img
+              src="./images/ice-cream.png"
+              alt="Миска с мороженым и взбитыми сливками в стиле каваи: шарики мороженого с милыми лицами, фрукты, трубочки и вишня сверху"
+              class="main__gallery__picture"
+            />
+          </li>
+          <li class="main__gallary__item">
+            <img
+              src="./images/tape.png"
+              alt="Ретро-иллюстрация аудиокассеты в фиолетово-розовых тонах с пиксельными элементами интерфейса и курсором мыши"
+              class="main__gallery__picture"
+            />
+          </li>
+          <li class="main__gallary__item">
+            <img
+              src="./images/books.png"
+              alt="Стопка книг в стиле иллюстрации с розовой кружкой наверху с надписью 'Read more'"
+              class="main__gallery__picture"
+            />
+          </li>
+          <li class="main__gallary__item">
+            <img
+              src="./images/street.png"
+              alt="Улица в японском стиле с традиционными домами, проводами и розовыми деревьями в закатных тонах"
+              class="main__gallery__picture"
+            />
+          </li>
+        </ul>
+      </section>
+    </main>
+    <footer class="footer">
+      <h2 class="footer__title">focus</h2>
+    </footer>
   </body>
 </html>
