--- a/index.html
+++ b/index.html
@@ -238,6 +238,7 @@
         <ul class="main__gallery__list">
           <li class="main__gallary__item">
             <img
+              loading="lazy"
               src="./images/sunset.png"
               alt="Закат над морем с горами и летящими птицами в розово-фиолетовых тонах"
               class="main__gallery__picture"
@@ -245,6 +246,7 @@
           </li>
           <li class="main__gallary__item">
             <img
+              loading="lazy"
               src="./images/ice-cream.png"
               alt="Миска с мороженым и взбитыми сливками в стиле каваи: шарики мороженого с милыми лицами, фрукты, трубочки и вишня сверху"
               class="main__gallery__picture"
@@ -252,6 +254,7 @@
           </li>
           <li class="main__gallary__item">
             <img
+              loading="lazy"
               src="./images/tape.png"
               alt="Ретро-иллюстрация аудиокассеты в фиолетово-розовых тонах с пиксельными элементами интерфейса и курсором мыши"
               class="main__gallery__picture"
@@ -259,6 +262,7 @@
           </li>
           <li class="main__gallary__item">
             <img
+              loading="lazy"
               src="./images/books.png"
               alt="Стопка книг в стиле иллюстрации с розовой кружкой наверху с надписью 'Read more'"
               class="main__gallery__picture"
@@ -266,6 +270,7 @@
           </li>
           <li class="main__gallary__item">
             <img
+              loading="lazy"
               src="./images/street.png"
               alt="Улица в японском стиле с традиционными домами, проводами и розовыми деревьями в закатных тонах"
               class="main__gallery__picture"
