--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
@@ -96,8 +96,10 @@
           </ul>
         </article>
       </section>
-      <section class="main__section">
-        <h2 class="main__title">Что снижает концентрацию внимания?</h2>
+      <section class="main__section main__section--cols-2">
+        <h2 class="main__title main__title--section-2">
+          Что снижает концентрацию внимания?
+        </h2>
         <article class="main__content">
           <ul class="main__content__list">
             <li class="main__content__element">
@@ -236,7 +238,7 @@
       <section class="main__section main__section__gallery">
         <h2 class="main__title__gallery title-decor">А можно в картинках?</h2>
         <ul class="main__gallery__list">
-          <li class="main__gallary__item">
+          <li class="main__gallary__item main__gallery__item--wide">
             <img
               loading="lazy"
               src="./images/sunset.png"
@@ -244,7 +246,7 @@
               class="main__gallery__picture"
             />
           </li>
-          <li class="main__gallary__item">
+          <li class="main__gallary__item main__gallery__item--tall">
             <img
               loading="lazy"
               src="./images/ice-cream.png"
@@ -252,7 +254,7 @@
               class="main__gallery__picture"
             />
           </li>
-          <li class="main__gallary__item">
+          <li class="main__gallary__item main__gallery__item--portrait">
             <img
               loading="lazy"
               src="./images/tape.png"
@@ -268,7 +270,7 @@
               class="main__gallery__picture"
             />
           </li>
-          <li class="main__gallary__item">
+          <li class="main__gallary__item main__gallery__item--panorama">
             <img
               loading="lazy"
               src="./images/street.png"
