--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
           Что снижает концентрацию внимания?
         </h2>
         <article class="main__content">
-          <ul class="main__content__list">
+          <ul class="main__content__list main__content_list--cols-3">
             <li class="main__content__element">
               <p class="main__content__element__subtitle title-decor">
                 Многозадачность
