add README and formatting document

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
@@ -58,30 +58,25 @@
       <section class="main__section">
         <h2 class="main__title">Почему сосредоточиться так сложно</h2>
         <article class="main__content">
-          <ul class="main__content__list">
+          <ul class="main__list">
             <li class="main__content__element">
-              <p class="main__content__element__subtitle title-decor">
-                Многозадачность
-              </p>
-              <p class="main__content__element__text">
+              <p class="main__subtitle title-decor">Многозадачность</p>
+              <p class="main__text">
                 Особенно сложно сосредоточиться, когда задач много и все они —
                 важные. Где же легендарная многозадачность, когда она так нужна
                 вам (и всем нанимающим менеджерам этого мира)? А дело в том, что
                 её просто не существует. Исследователи
-                <a href="#" class="main__content__element__text-link"
-                  >выяснили</a
-                >, что мозгу тяжело концентрироваться даже на двух делах
-                одновременно. А когда в поле внимания попадает несколько важных
-                задач, организм паникует и выделяет кортизол и адреналин —
-                «гормоны стресса». Из-за этого мы работаем невнимательно:
-                ошибаемся и быстро устаём.
+                <a href="#" class="main__text-link">выяснили</a>, что мозгу
+                тяжело концентрироваться даже на двух делах одновременно. А
+                когда в поле внимания попадает несколько важных задач, организм
+                паникует и выделяет кортизол и адреналин — «гормоны стресса».
+                Из-за этого мы работаем невнимательно: ошибаемся и быстро
+                устаём.
               </p>
             </li>
             <li class="main__content__element">
-              <p class="main__content__element__subtitle title-decor subtitle">
-                Дофамин
-              </p>
-              <p class="main__content__element__text">
+              <p class="main__subtitle title-decor subtitle">Дофамин</p>
+              <p class="main__text">
                 С гормонами стресса всё понятно, но дальше — ещё интереснее. В
                 нашей невозможности сосредоточиться замешана и полная
                 противоположность стрессу — дофамин. Это вещество участвует в
@@ -96,17 +91,15 @@
           </ul>
         </article>
       </section>
-      <section class="main__section main__section--cols-2">
-        <h2 class="main__title main__title--section-2">
+      <section class="main__section main__section_cols_2">
+        <h2 class="main__title main__title_section-2">
           Что снижает концентрацию внимания?
         </h2>
         <article class="main__content">
-          <ul class="main__content__list main__content_list--cols-3">
+          <ul class="main__list main__list_cols_3">
             <li class="main__content__element">
-              <p class="main__content__element__subtitle title-decor">
-                Многозадачность
-              </p>
-              <p class="main__content__element__text">
+              <p class="main__subtitle title-decor">Многозадачность</p>
+              <p class="main__text">
                 Как концентрация может снижаться из-за… концентрации? Любая
                 стрессовая ситуация (и резко меняющийся мир в целом) заставляет
                 наш мозг постоянно «сканировать» окружающую среду на предмет
@@ -116,10 +109,8 @@
               </p>
             </li>
             <li class="main__content__element">
-              <p class="main__content__element__subtitle title-decor subtitle">
-                Еда
-              </p>
-              <p class="main__content__element__text">
+              <p class="main__subtitle title-decor subtitle">Еда</p>
+              <p class="main__text">
                 «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно
                 доставляют в мозг энергию и помогают ему лучше работать. Но
                 уходит эта энергия также быстро, как и приходит. А мы в
@@ -129,10 +120,8 @@
               </p>
             </li>
             <li class="main__content__element">
-              <p class="main__content__element__subtitle title-decor">
-                Гаджеты
-              </p>
-              <p class="main__content__element__text">
+              <p class="main__subtitle title-decor">Гаджеты</p>
+              <p class="main__text">
                 Да-да, это та самая ситуация, когда на экране ноутбука — код, в
                 наушниках — подкаст, а на компьютере фоном — ещё и видео с
                 забавными утятами. В результате мозг пытается переключиться с
@@ -152,19 +141,17 @@
           секунд)
         </h2>
         <article class="main__content">
-          <ul class="main__content__list">
+          <ul class="main__list">
             <li class="main__content__element">
-              <div class="main__content__element__subtitle__wrapper">
-                <p class="main__content__element__subtitle title-decor">
+              <div class="main__subtitle__wrapper">
+                <p class="main__subtitle title-decor">
                   5 простых (на самом деле не очень) советов
                 </p>
-                <p
-                  class="main__content__element__subtitle main__content__element__subtitle--regular title-decor"
-                >
+                <p class="main__subtitle main__subtitle--regular title-decor">
                   Представьте небо и облака
                 </p>
               </div>
-              <p class="main__content__element__text">
+              <p class="main__text">
                 Или листья в ручье. Тут дело в лёгкой медитации, которая
                 помогает успокоиться. Ведь часто именно тревожные мысли о
                 сложных задачах как раз и мешают эти сложные задачи делать. В
@@ -176,12 +163,10 @@
               </p>
             </li>
             <li class="main__content__element">
-              <p
-                class="main__content__element__subtitle main__content__element__subtitle--regular title-decor"
-              >
+              <p class="main__subtitle main__subtitle--regular title-decor">
                 Включите музыку
               </p>
-              <p class="main__content__element__text">
+              <p class="main__text">
                 Но не любую, и не любимую. Любимая может быть связана с сильными
                 положительными эмоциями, которые тоже очень сильно отвлекают.
                 Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще
@@ -189,29 +174,24 @@
               </p>
             </li>
             <li class="main__content__element">
-              <p
-                class="main__content__element__subtitle main__content__element__subtitle--regular title-decor"
-              >
+              <p class="main__subtitle main__subtitle--regular title-decor">
                 Прогуляйтесь
               </p>
-              <p class="main__content__element__text">
+              <p class="main__text">
                 Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
-                <a href="#" class="main__content__element__text-link">показал</a
-                >, что созерцание природы повышает концентрацию, в то время как
-                после просмотра городских пейзажей она наоборот понижается.
-                Можно совместить прогулку с физическими упражнениями или бегом —
-                так в мозг поступит ещё больше кислорода и он будет лучше
-                работать. Но и простая двадцатиминутная прогулка — тоже отличный
-                вариант.
+                <a href="#" class="main__text-link">показал</a>, что созерцание
+                природы повышает концентрацию, в то время как после просмотра
+                городских пейзажей она наоборот понижается. Можно совместить
+                прогулку с физическими упражнениями или бегом — так в мозг
+                поступит ещё больше кислорода и он будет лучше работать. Но и
+                простая двадцатиминутная прогулка — тоже отличный вариант.
               </p>
             </li>
             <li class="main__content__element">
-              <p
-                class="main__content__element__subtitle main__content__element__subtitle--regular title-decor"
-              >
+              <p class="main__subtitle main__subtitle--regular title-decor">
                 Хорошо ешьте
               </p>
-              <p class="main__content__element__text">
+              <p class="main__text">
                 Мы — не ваша бабушка, но это правда важно. Выбирайте продукты,
                 которые препятствуют резким скачкам сахара в крови. Например, с
                 высоким содержанием клетчатки: овощи, ягоды, бобовые (нут,
@@ -220,12 +200,10 @@
               </p>
             </li>
             <li class="main__content__element">
-              <p
-                class="main__content__element__subtitle main__content__element__subtitle--regular title-decor"
-              >
+              <p class="main__subtitle main__subtitle--regular title-decor">
                 Читайте
               </p>
-              <p class="main__content__element__text">
+              <p class="main__text">
                 Настоящие бумажные книги. Это правда помогает с концентрацией:
                 чтобы прочитать пост в соцсети, достаточно нескольких минут или
                 даже секунд. А вот интересная книга способна затянуть и на
@@ -235,10 +213,12 @@
           </ul>
         </article>
       </section>
-      <section class="main__section main__section__gallery">
-        <h2 class="main__title__gallery title-decor">А можно в картинках?</h2>
+      <section class="main__section main__section_gallery">
+        <h2 class="main__title main__title_gallery title-decor">
+          А можно в картинках?
+        </h2>
         <ul class="main__gallery__list">
-          <li class="main__gallary__item main__gallery__item--wide">
+          <li class="main__gallery__item main__gallery__item_wide">
             <img
               loading="lazy"
               src="./images/sunset.png"
@@ -246,7 +226,7 @@
               class="main__gallery__picture"
             />
           </li>
-          <li class="main__gallary__item main__gallery__item--tall">
+          <li class="main__gallery__item main__gallery__item_tall">
             <img
               loading="lazy"
               src="./images/ice-cream.png"
@@ -254,7 +234,7 @@
               class="main__gallery__picture"
             />
           </li>
-          <li class="main__gallary__item main__gallery__item--portrait">
+          <li class="main__gallery__item main__gallery__item_portrait">
             <img
               loading="lazy"
               src="./images/tape.png"
@@ -262,7 +242,7 @@
               class="main__gallery__picture"
             />
           </li>
-          <li class="main__gallary__item">
+          <li class="main__gallery__item">
             <img
               loading="lazy"
               src="./images/books.png"
@@ -270,7 +250,7 @@
               class="main__gallery__picture"
             />
           </li>
-          <li class="main__gallary__item main__gallery__item--panorama">
+          <li class="main__gallery__item main__gallery__item_panorama">
             <img
               loading="lazy"
               src="./images/street.png"
