review revision completed

--- a/index.html
+++ b/index.html
@@ -13,8 +13,18 @@
     <link rel="stylesheet" href="./styles/globals.css" />
     <link rel="stylesheet" href="./styles/variables.css" />
     <link rel="stylesheet" href="./styles/style.css" />
-    <link rel="stylesheet" media="(prefers-color-scheme: light)" href="./styles/light.css">
-    <link rel="stylesheet" media="(prefers-color-scheme: dark)" href="./styles/dark.css">
+    <link rel="stylesheet" href="./styles/light.css" />
+    <link rel="stylesheet" href="./styles/dark.css" />
+    <link
+      rel="stylesheet"
+      media="(prefers-color-scheme: light)"
+      href="./styles/light.css"
+    />
+    <link
+      rel="stylesheet"
+      media="(prefers-color-scheme: dark)"
+      href="./styles/dark.css"
+    />
     <script src="./scripts/script.js"></script>
   </head>
 
@@ -60,22 +70,26 @@
         <article class="main__content">
           <ul class="main__list">
             <li class="main__content__element">
-              <p class="main__subtitle title-decor">Многозадачность</p>
+              <h3 class="main__subtitle title-decor">Многозадачность</h3>
               <p class="main__text">
                 Особенно сложно сосредоточиться, когда задач много и все они —
                 важные. Где же легендарная многозадачность, когда она так нужна
                 вам (и всем нанимающим менеджерам этого мира)? А дело в том, что
                 её просто не существует. Исследователи
-                <a href="#" class="main__text-link">выяснили</a>, что мозгу
-                тяжело концентрироваться даже на двух делах одновременно. А
-                когда в поле внимания попадает несколько важных задач, организм
-                паникует и выделяет кортизол и адреналин — «гормоны стресса».
-                Из-за этого мы работаем невнимательно: ошибаемся и быстро
-                устаём.
+                <a
+                  href="https://dana.org/article/multicosts-of-multitasking/"
+                  target="_blank"
+                  class="main__text-link"
+                  >выяснили</a
+                >, что мозгу тяжело концентрироваться даже на двух делах
+                одновременно. А когда в поле внимания попадает несколько важных
+                задач, организм паникует и выделяет кортизол и адреналин —
+                «гормоны стресса». Из-за этого мы работаем невнимательно:
+                ошибаемся и быстро устаём.
               </p>
             </li>
             <li class="main__content__element">
-              <p class="main__subtitle title-decor subtitle">Дофамин</p>
+              <h3 class="main__subtitle title-decor subtitle">Дофамин</h3>
               <p class="main__text">
                 С гормонами стресса всё понятно, но дальше — ещё интереснее. В
                 нашей невозможности сосредоточиться замешана и полная
@@ -91,14 +105,12 @@
           </ul>
         </article>
       </section>
-      <section class="main__section main__section_cols_2">
-        <h2 class="main__title main__title_section-2">
-          Что снижает концентрацию внимания?
-        </h2>
-        <article class="main__content">
+      <section class="main__section">
+        <h2 class="main__title">Что снижает концентрацию внимания?</h2>
+        <article class="main__content main__content_row-2">
           <ul class="main__list main__list_cols_3">
             <li class="main__content__element">
-              <p class="main__subtitle title-decor">Многозадачность</p>
+              <h3 class="main__subtitle title-decor">Многозадачность</h3>
               <p class="main__text">
                 Как концентрация может снижаться из-за… концентрации? Любая
                 стрессовая ситуация (и резко меняющийся мир в целом) заставляет
@@ -109,7 +121,7 @@
               </p>
             </li>
             <li class="main__content__element">
-              <p class="main__subtitle title-decor subtitle">Еда</p>
+              <h3 class="main__subtitle title-decor subtitle">Еда</h3>
               <p class="main__text">
                 «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно
                 доставляют в мозг энергию и помогают ему лучше работать. Но
@@ -120,7 +132,7 @@
               </p>
             </li>
             <li class="main__content__element">
-              <p class="main__subtitle title-decor">Гаджеты</p>
+              <h3 class="main__subtitle title-decor">Гаджеты</h3>
               <p class="main__text">
                 Да-да, это та самая ситуация, когда на экране ноутбука — код, в
                 наушниках — подкаст, а на компьютере фоном — ещё и видео с
@@ -144,12 +156,12 @@
           <ul class="main__list">
             <li class="main__content__element">
               <div class="main__subtitle__wrapper">
-                <p class="main__subtitle title-decor">
+                <h3 class="main__subtitle title-decor">
                   5 простых (на самом деле не очень) советов
-                </p>
-                <p class="main__subtitle main__subtitle--regular title-decor">
+                </h3>
+                <h3 class="main__subtitle main__subtitle--regular title-decor">
                   Представьте небо и облака
-                </p>
+                </h3>
               </div>
               <p class="main__text">
                 Или листья в ручье. Тут дело в лёгкой медитации, которая
@@ -163,9 +175,9 @@
               </p>
             </li>
             <li class="main__content__element">
-              <p class="main__subtitle main__subtitle--regular title-decor">
+              <h3 class="main__subtitle main__subtitle--regular title-decor">
                 Включите музыку
-              </p>
+              </h3>
               <p class="main__text">
                 Но не любую, и не любимую. Любимая может быть связана с сильными
                 положительными эмоциями, которые тоже очень сильно отвлекают.
@@ -174,23 +186,28 @@
               </p>
             </li>
             <li class="main__content__element">
-              <p class="main__subtitle main__subtitle--regular title-decor">
+              <h3 class="main__subtitle main__subtitle--regular title-decor">
                 Прогуляйтесь
-              </p>
+              </h3>
               <p class="main__text">
                 Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
-                <a href="#" class="main__text-link">показал</a>, что созерцание
-                природы повышает концентрацию, в то время как после просмотра
-                городских пейзажей она наоборот понижается. Можно совместить
-                прогулку с физическими упражнениями или бегом — так в мозг
-                поступит ещё больше кислорода и он будет лучше работать. Но и
-                простая двадцатиминутная прогулка — тоже отличный вариант.
+                <a
+                  href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328"
+                  target="_blank"
+                  class="main__text-link"
+                  >показал</a
+                >, что созерцание природы повышает концентрацию, в то время как
+                после просмотра городских пейзажей она наоборот понижается.
+                Можно совместить прогулку с физическими упражнениями или бегом —
+                так в мозг поступит ещё больше кислорода и он будет лучше
+                работать. Но и простая двадцатиминутная прогулка — тоже отличный
+                вариант.
               </p>
             </li>
             <li class="main__content__element">
-              <p class="main__subtitle main__subtitle--regular title-decor">
+              <h3 class="main__subtitle main__subtitle--regular title-decor">
                 Хорошо ешьте
-              </p>
+              </h3>
               <p class="main__text">
                 Мы — не ваша бабушка, но это правда важно. Выбирайте продукты,
                 которые препятствуют резким скачкам сахара в крови. Например, с
@@ -200,9 +217,9 @@
               </p>
             </li>
             <li class="main__content__element">
-              <p class="main__subtitle main__subtitle--regular title-decor">
+              <h3 class="main__subtitle main__subtitle--regular title-decor">
                 Читайте
-              </p>
+              </h3>
               <p class="main__text">
                 Настоящие бумажные книги. Это правда помогает с концентрацией:
                 чтобы прочитать пост в соцсети, достаточно нескольких минут или
