--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
       </section>
       <section class="main__section">
         <h2 class="main__title">Что снижает концентрацию внимания?</h2>
-        <article class="main__content main__content_row-2">
+        <article class="main__content main__content_wide">
           <ul class="main__list main__list_cols_3">
             <li class="main__content__element">
               <h3 class="main__subtitle title-decor">Многозадачность</h3>
@@ -159,9 +159,9 @@
                 <h3 class="main__subtitle title-decor">
                   5 простых (на самом деле не очень) советов
                 </h3>
-                <h3 class="main__subtitle main__subtitle--regular title-decor">
+                <h4 class="main__subtitle main__subtitle--regular title-decor">
                   Представьте небо и облака
-                </h3>
+                </h4>
               </div>
               <p class="main__text">
                 Или листья в ручье. Тут дело в лёгкой медитации, которая
@@ -175,9 +175,9 @@
               </p>
             </li>
             <li class="main__content__element">
-              <h3 class="main__subtitle main__subtitle--regular title-decor">
+              <h4 class="main__subtitle main__subtitle--regular title-decor">
                 Включите музыку
-              </h3>
+              </h4>
               <p class="main__text">
                 Но не любую, и не любимую. Любимая может быть связана с сильными
                 положительными эмоциями, которые тоже очень сильно отвлекают.
@@ -186,9 +186,9 @@
               </p>
             </li>
             <li class="main__content__element">
-              <h3 class="main__subtitle main__subtitle--regular title-decor">
+              <h4 class="main__subtitle main__subtitle--regular title-decor">
                 Прогуляйтесь
-              </h3>
+              </h4>
               <p class="main__text">
                 Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
                 <a
@@ -205,9 +205,9 @@
               </p>
             </li>
             <li class="main__content__element">
-              <h3 class="main__subtitle main__subtitle--regular title-decor">
+              <h4 class="main__subtitle main__subtitle--regular title-decor">
                 Хорошо ешьте
-              </h3>
+              </h4>
               <p class="main__text">
                 Мы — не ваша бабушка, но это правда важно. Выбирайте продукты,
                 которые препятствуют резким скачкам сахара в крови. Например, с
