--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       <section class="main__section">
         <h2 class="main__title">Что снижает концентрацию внимания?</h2>
         <article class="main__content main__content_wide">
-          <ul class="main__list main__list_cols_3">
+          <ul class="main__list main__list_layout">
             <li class="main__content__element">
               <h3 class="main__subtitle title-decor">Многозадачность</h3>
               <p class="main__text">
@@ -217,9 +217,9 @@
               </p>
             </li>
             <li class="main__content__element">
-              <h3 class="main__subtitle main__subtitle--regular title-decor">
+              <h4 class="main__subtitle main__subtitle--regular title-decor">
                 Читайте
-              </h3>
+              </h4>
               <p class="main__text">
                 Настоящие бумажные книги. Это правда помогает с концентрацией:
                 чтобы прочитать пост в соцсети, достаточно нескольких минут или
